# SLAMVDB

./: .gitignore  .gitmodules  README.md  mvdb_config.cfg  rviz.rviz
discrete_colors/: asphalt or concrete.csv  building or fence or bridge.csv  bush.csv  dirt or mulch or gravel or sand.csv  grass.csv  other.csv  rock or rock-bed.csv  sky.csv  tree or log.csv  water.csv
discrete_vectors/: asphalt or concrete.csv  building or fence or bridge.csv  bush.csv  dirt or mulch or gravel or sand.csv  grass.csv  other.csv  rock or rock-bed.csv  sky.csv  tree or log.csv  water.csv
src/mvdb/: CMakeLists.txt  package.xml
src/mvdb/config/: mvdb_config.cfg
src/mvdb/include/mvdb/: buffer_nodes.hxx  config.hxx  mapper_nodes.hxx  math_utils.hxx  octree.hxx  projection.hxx  quantizer.hxx  record.hxx  ros_utils.hxx  typedefs.hxx  utils.hxx  visualization.hxx
src/mvdb/launch/: mvdb.py
src/mvdb/lib/mvdb/: buffer_nodes.cpp  config.cpp  mapper_nodes.cpp  math_utils.cpp  octree.cpp  projection.cpp  quantizer.cpp  record.cpp  ros_utils.cpp  utils.cpp
src/mvdb/src/: main.cpp
src/mvdb/test/: test_config.cpp  test_octree.cpp  test_projection.cpp  test_quantizer.cpp  test_record.cpp  test_utils.cpp
src/mvdb/testdata/: cloud_a.csv  pointcloud.csv  poses.csv
src/mvdb_interface/: CMakeLists.txt  package.xml
src/mvdb_interface/msg/: EmbeddingMessage.msg  LoopMessage.msg  VectorImage.msg
src/mvdb_interface/srv/: Embedding.srv  MapQuerySemantic.srv  MapQuerySpatial.srv  Segmentation.srv
src/mvdb_mapper/: LICENSE  package.xml  setup.cfg  setup.py
src/mvdb_mapper/launch/: mapper.py
src/mvdb_mapper/mvdb_mapper/: config.py  mapper.py  mapper_node.py  scd.py
src/mvdb_py/: package.xml  setup.cfg  setup.py
src/mvdb_py/mvdb_py/: config.py  utils.py
src/mvdb_tracker/: package.xml  setup.cfg  setup.py
src/mvdb_tracker/config/: config.yaml
src/mvdb_tracker/launch/: tracker.py
src/mvdb_tracker/mvdb_tracker/: config.py  tracker.py  tracker_node.py
