<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mvdb_tracker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="peteris.racinskis@edi.lv">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>open3d</depend>
  <depend>pyyaml</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
